# spelling_bee

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  spec.md  vite.config.ts
.github/workflows/: deploy-pages.yml
docs/: tts-engine-evaluation.md
public/: manifest.webmanifest  sw.js
public/data/: wordlists.json
public/tts/: README.md  manifest.json
public/tts/onnx/: README.md
public/tts/piper/models/: en_US-lessac-high.onnx.json
python/sentence_tune/: .env.example  .gitignore  README.md  pyproject.toml
python/sentence_tune/scripts/: check.sh  generate.py  optimize.py  preview.py
python/sentence_tune/sentence_tune/: __init__.py  data.py  lm.py  metric.py  models.py  modules.py  settings.py  signatures.py
scripts/: README.md  enrich-words.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src/components/: ScreenHeader.tsx
src/features/geoSearch/: GeoSearch.tsx  sampleMembers.ts
src/features/levels/: LevelSelect.tsx
src/features/math/: DivisionSelect.tsx  FractionDifficultySelect.tsx  FractionSelect.tsx  MathCategorySelect.tsx  MathPractice.tsx  MultiplicationSelect.tsx
src/features/practice/: Practice.tsx
src/features/settings/: Settings.tsx
src/lib/: data.ts  geo.ts  math.ts
src/lib/homophones/: index.ts
src/lib/sentences/: advanced.ts  common.ts  common2.ts  rare.ts  school.ts
src/lib/shuffle/: index.ts
src/lib/storage/: index.ts
src/lib/tts/: audio.ts  index.ts  kokoro.ts  native.ts  piper.ts  types.ts
(+1 files in other folders)
